# torch-mdn

./: .gitignore  README.md  setup.cfg
env/: activate.sh  environment.yml  setup.sh
examples/: data.py
src/torch_mdn/: builder.py  decompose.py  gaussian.py  ilayer.py  layer.py  layer_ops_base.py  loss.py  mdn.py  utils.py
tests/: test_gaussian.py  test_gaussian_matrix.py  test_utils.py
