[metadata]
name = torch-mdn
version = 0.0.1
author = Troi Williams
description = Provides utilities for creating Mixture Density Networks with PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/troiwill/torch-mdn
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy >= 1.21.2
    pytorch >= 1.10.2
    importlib-metadata; python_version >= "3.8"
package_dir =
    = src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src
exclude =
    dist*
    env*
    tests*