[metadata]
name = torch-mdn
version = 0.1.0
author = Troi Williams
description = Provides utilities for creating Mixture Density Networks with PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/troiwill/torch-mdn
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    # numpy >= 1.21.2
    torch==1.10.2
    importlib-metadata; python_version >= "3.8"
    pydantic==1.10.10
    mypy >= 1.3.0
package_dir =
    = src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src
exclude =
    dist*
    env*
    tests*

[tool.mypy]
plugins = [ "pydantic.mypy",]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
